<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTour"
    android:padding="15dp"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/linearListInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:hint="@string/blank"
                android:inputType="text"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tvStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/edtStartDate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="date"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tvEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/edtEndDate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="date"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tvSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Source"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/edtSource"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="date"
                android:textSize="17dp"
                android:hint="Choose on map..."
                android:layout_weight="1"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tvDestination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Destination"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/edtDestination"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="date"
                android:textSize="17dp"
                android:hint="Choose on map..."
                android:layout_weight="1"
                android:layout_marginBottom="10dp"/>

            <Switch
                android:id="@+id/switchPrivateTour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/private_tour"
                android:textSize="20sp"
                android:layout_weight="1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="20">
                <Button
                    android:id="@+id/btnCreateDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_rounded_corners"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_gravity="bottom"
                    android:text="@string/done"
                    android:textSize="25sp"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>