<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateTour">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:padding="20dp">
        <LinearLayout
            android:id="@+id/linearListInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/utName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/blank"
                android:inputType="text"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tvStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/utStartDate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="date"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tvEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/utEndDate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="date"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tvSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Source"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/utSource"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="Choose on map..."
                android:inputType="date"
                android:textSize="17dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tvDestination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Destination"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/utDestination"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="Choose on map..."
                android:inputType="date"
                android:textSize="17dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tvadults"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Adults"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/utadults"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="date"
                android:textSize="17dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tvchilds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Childs"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/utchilds"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="date"
                android:textSize="17dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tvminCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Min Cost"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/utminCost"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="date"
                android:textSize="17dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tvmaxCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Max Cost"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/utmaxCost"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="date"
                android:textSize="17dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tvstatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Status"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/utstatus"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="date"
                android:textSize="17dp"
                android:hint="-1: Canceled | 0: Open | 1: Started | 2: Closed"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"/>

            <Switch
                android:id="@+id/utPravate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/private_tour"
                android:textSize="20sp"
                android:layout_weight="1"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="20dp">
        <Button
            android:id="@+id/btnCreateDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded_corners"
            android:backgroundTint="@color/colorPrimary"
            android:layout_gravity="bottom"
            android:text="@string/done"
            android:textSize="25sp"
            />
    </LinearLayout>
</LinearLayout>